CPG-DEV/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>CanAllowPortalSelfReg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Customer Portal Self-Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LanguagePreference__c</fullName>
        <globalPicklist>Language</globalPicklist>
        <label>Language Preference</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LeadSource__c</fullName>
        <globalPicklist>Lead_Source</globalPicklist>
        <label>Lead Source</label>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewsletterOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Newsletter Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Business__c</fullName>
        <formula>Owner.CargillBusiness_Text__c</formula>
        <label>Owner Business</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts Payable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Category Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Culinary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Franchisee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Logistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA/Regulatory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supply Chain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical/R&amp;D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Merchandiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>